update: record entryes